--- a/src/styles/components/_toolbar.scss
+++ b/src/styles/components/_toolbar.scss
@@ -5,6 +5,7 @@
   background: white;
   border-bottom: $odc-divider-border;
   box-sizing: content-box;
+  flex: 0 0 $odc-topappbar-height;
 
   &__row {
     min-height: $odc-topappbar-height;
